fix group spacing

--- a/src/components/Group.scss
+++ b/src/components/Group.scss
@@ -7,6 +7,8 @@
   justify-content: space-between;
   align-items: center;
 
+  width: fit-content;
+
   gap: 40px;
   padding: 40px;
 
